add: actual rendering pipeline refactor: hardened most asset / gpuResource handling, loading etc